--- a/pages/calendario_de_folga.html
+++ b/pages/calendario_de_folga.html
@@ -11,8 +11,8 @@
     <link href="../css_dash/fonts/circular-std/style.css" rel="stylesheet"><link rel="stylesheet" href="../css_dash/caixa_estilo.css">
     
     <link rel="stylesheet" href="../css_dash/fonts/fontawesome/css/fontawesome-all.css">
-    <link href='../assets/vendor/full-calendar/css/fullcalendar.css' rel='stylesheet' />
-    <link href='../assets/vendor/full-calendar/css/fullcalendar.print.css' rel='stylesheet' media='print' />
+    <link href='../css_dash/fullcalendar.css' rel='stylesheet' />
+    <link href='../css_dash/fullcalendar.print.css' rel='stylesheet' media='print' />
     <link rel="icon" href="img/vagas.ico" type="image/png">
     <title>VAGASPARK</title>
 </head>
@@ -49,7 +49,7 @@
                                         <div class="list-group">
                                             <a  class="list-group-item list-group-item-action active">
                                                 <div class="notification-info">
-                                                    <div class="notification-list-user-img"><img src="assets/images/avatar-2.jpg" alt="" class="user-avatar-md rounded-circle"></div>
+                                                    <div class="notification-list-user-img"><img src="img/img_sistema/avatar-2.jpg" alt="" class="user-avatar-md rounded-circle"></div>
                                                     <div class="notification-list-user-block"><span class="notification-list-user-name">Atonio Carlos</span>Acabou de Adicionar um Cliente.
                                                         <div class="notification-date">Agora </div>
                                                     </div>
@@ -57,7 +57,7 @@
                                             </a>
                                             <a  class="list-group-item list-group-item-action">
                                                 <div class="notification-info">
-                                                    <div class="notification-list-user-img"><img src="assets/images/avatar-3.jpg" alt="" class="user-avatar-md rounded-circle"></div>
+                                                    <div class="notification-list-user-img"><img src="img/img_sistema/avatar-3.jpg" alt="" class="user-avatar-md rounded-circle"></div>
                                                     <div class="notification-list-user-block"><span class="notification-list-user-name">Enzo</span>Acabou de fazer Suarice no Sistema
                                                         <div class="notification-date">2 days ago</div>
                                                     </div>
@@ -65,7 +65,7 @@
                                             </a>
                                             <a  class="list-group-item list-group-item-action">
                                                 <div class="notification-info">
-                                                    <div class="notification-list-user-img"><img src="assets/images/avatar-4.jpg" alt="" class="user-avatar-md rounded-circle"></div>
+                                                    <div class="notification-list-user-img"><img src="img/img_sistema/avatar-4.jpg" alt="" class="user-avatar-md rounded-circle"></div>
                                                     <div class="notification-list-user-block"><span class="notification-list-user-name">Rayza</span> Acaba de excluir sua conta
                                                         <div class="notification-date">3 min ago</div>
                                                     </div>
@@ -73,7 +73,7 @@
                                             </a>
                                             <a  class="list-group-item list-group-item-action">
                                                 <div class="notification-info">
-                                                    <div class="notification-list-user-img"><img src="assets/images/avatar-5.jpg" alt="" class="user-avatar-md rounded-circle"></div>
+                                                    <div class="notification-list-user-img"><img src="img/img_sistema/avatar-5.jpg" alt="" class="user-avatar-md rounded-circle"></div>
                                                     <div class="notification-list-user-block"><span class="notification-list-user-name">Rafa</span>Alterou documentação
                                                         <div class="notification-date">10 min ago</div>
                                                     </div>
@@ -93,24 +93,24 @@
                                 <li class="connection-list">
                                     <div class="row">
                                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 ">
-                                            <a  class="connection-item"><img src="assets/images/github.png" alt="" > <span>Github</span></a>
+                                            <a  class="connection-item"><img src="img/img_sistema/github.png" alt="" > <span>Github</span></a>
                                         </div>
                                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 ">
-                                            <a  class="connection-item"><img src="assets/images/dribbble.png" alt="" > <span>Cadastro</span></a>
+                                            <a  class="connection-item"><img src="img/img_sistema/dribbble.png" alt="" > <span>Cadastro</span></a>
                                         </div>
                                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 ">
-                                            <a  class="connection-item"><img src="assets/images/dropbox.png" alt="" > <span>Tabela</span></a>
+                                            <a  class="connection-item"><img src="img/img_sistema/dropbox.png" alt="" > <span>Tabela</span></a>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 ">
-                                            <a  class="connection-item"><img src="assets/images/bitbucket.png" alt=""> <span>Contatos</span></a>
+                                            <a  class="connection-item"><img src="img/img_sistema/bitbucket.png" alt=""> <span>Contatos</span></a>
                                         </div>
                                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 ">
-                                            <a  class="connection-item"><img src="assets/images/mail_chimp.png" alt="" ><span>Email</span></a>
+                                            <a  class="connection-item"><img src="img/img_sistema/mail_chimp.png" alt="" ><span>Email</span></a>
                                         </div>
                                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 ">
-                                            <a  class="connection-item"><img src="assets/images/slack.png" alt="" > <span>Produtos</span></a>
+                                            <a  class="connection-item"><img src="img/img_sistema/slack.png" alt="" > <span>Produtos</span></a>
                                         </div>
                                     </div>
                                 </li>
@@ -120,7 +120,7 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown nav-user">
-                            <a class="nav-link nav-user-img"  id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="assets/images/avatar-1.jpg" alt="" class="user-avatar-md rounded-circle"></a>
+                            <a class="nav-link nav-user-img"  id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="../img/img_sistema/avatar-1.jpg" alt="" class="user-avatar-md rounded-circle"></a>
                             <div class="dropdown-menu dropdown-menu-right nav-user-dropdown" aria-labelledby="navbarDropdownMenuLink2">
                                 <div class="nav-user-info">
                                     <h5 class="mb-0 text-white nav-user-name">Antonio Carlos</h5>
@@ -469,10 +469,10 @@
       <script src="../chart_js/jquery-3.3.1.min.js"></script>
     <script src="../chart_js/bootstrap.bundle.js"></script>
     <script src="../chart_js/jquery.slimscroll.js"></script>
-    <script src='../assets/vendor/full-calendar/js/moment.min.js'></script>
-    <script src='../assets/vendor/full-calendar/js/fullcalendar.js'></script>
-    <script src='../assets/vendor/full-calendar/js/jquery-ui.min.js'></script>
-    <script src='../assets/vendor/full-calendar/js/calendar.js'></script>
+    <script src='../chart_js/moment.min.js'></script>
+    <script src='../chart_js/fullcalendar.js'></script>
+    <script src='../chart_js/jquery-ui.min.js'></script>
+    <script src='../chart_js/calendar.js'></script>
     <script src="../chart_js/main-js.js"></script>
 </body>
  
