--- a/pages/erro_404.html
+++ b/pages/erro_404.html
@@ -44,7 +44,7 @@
                                         <div class="list-group">
                                             <a  class="list-group-item list-group-item-action active">
                                                 <div class="notification-info">
-                                                    <div class="notification-list-user-img"><img src="assets/images/avatar-2.jpg" alt="" class="user-avatar-md rounded-circle"></div>
+                                                    <div class="notification-list-user-img"><img src="img/img_sistema/avatar-2.jpg" alt="" class="user-avatar-md rounded-circle"></div>
                                                     <div class="notification-list-user-block"><span class="notification-list-user-name">Atonio Carlos</span>Acabou de Adicionar um Cliente.
                                                         <div class="notification-date">Agora </div>
                                                     </div>
@@ -52,7 +52,7 @@
                                             </a>
                                             <a  class="list-group-item list-group-item-action">
                                                 <div class="notification-info">
-                                                    <div class="notification-list-user-img"><img src="assets/images/avatar-3.jpg" alt="" class="user-avatar-md rounded-circle"></div>
+                                                    <div class="notification-list-user-img"><img src="img/img_sistema/avatar-3.jpg" alt="" class="user-avatar-md rounded-circle"></div>
                                                     <div class="notification-list-user-block"><span class="notification-list-user-name">Enzo</span>Acabou de fazer Suarice no Sistema
                                                         <div class="notification-date">2 days ago</div>
                                                     </div>
@@ -60,7 +60,7 @@
                                             </a>
                                             <a  class="list-group-item list-group-item-action">
                                                 <div class="notification-info">
-                                                    <div class="notification-list-user-img"><img src="assets/images/avatar-4.jpg" alt="" class="user-avatar-md rounded-circle"></div>
+                                                    <div class="notification-list-user-img"><img src="img/img_sistema/avatar-4.jpg" alt="" class="user-avatar-md rounded-circle"></div>
                                                     <div class="notification-list-user-block"><span class="notification-list-user-name">Rayza</span> Acaba de excluir sua conta
                                                         <div class="notification-date">3 min ago</div>
                                                     </div>
@@ -68,7 +68,7 @@
                                             </a>
                                             <a  class="list-group-item list-group-item-action">
                                                 <div class="notification-info">
-                                                    <div class="notification-list-user-img"><img src="assets/images/avatar-5.jpg" alt="" class="user-avatar-md rounded-circle"></div>
+                                                    <div class="notification-list-user-img"><img src="img/img_sistema/avatar-5.jpg" alt="" class="user-avatar-md rounded-circle"></div>
                                                     <div class="notification-list-user-block"><span class="notification-list-user-name">Rafa</span>Alterou documentação
                                                         <div class="notification-date">10 min ago</div>
                                                     </div>
@@ -88,24 +88,24 @@
                                 <li class="connection-list">
                                     <div class="row">
                                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 ">
-                                            <a  class="connection-item"><img src="assets/images/github.png" alt="" > <span>Github</span></a>
+                                            <a  class="connection-item"><img src="img/img_sistema/github.png" alt="" > <span>Github</span></a>
                                         </div>
                                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 ">
-                                            <a  class="connection-item"><img src="assets/images/dribbble.png" alt="" > <span>Cadastro</span></a>
+                                            <a  class="connection-item"><img src="img/img_sistema/dribbble.png" alt="" > <span>Cadastro</span></a>
                                         </div>
                                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 ">
-                                            <a  class="connection-item"><img src="assets/images/dropbox.png" alt="" > <span>Tabela</span></a>
+                                            <a  class="connection-item"><img src="img/img_sistema/dropbox.png" alt="" > <span>Tabela</span></a>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 ">
-                                            <a  class="connection-item"><img src="assets/images/bitbucket.png" alt=""> <span>Contatos</span></a>
+                                            <a  class="connection-item"><img src="img/img_sistema/bitbucket.png" alt=""> <span>Contatos</span></a>
                                         </div>
                                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 ">
-                                            <a  class="connection-item"><img src="assets/images/mail_chimp.png" alt="" ><span>Email</span></a>
+                                            <a  class="connection-item"><img src="img/img_sistema/mail_chimp.png" alt="" ><span>Email</span></a>
                                         </div>
                                         <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 ">
-                                            <a  class="connection-item"><img src="assets/images/slack.png" alt="" > <span>Produtos</span></a>
+                                            <a  class="connection-item"><img src="img/img_sistema/slack.png" alt="" > <span>Produtos</span></a>
                                         </div>
                                     </div>
                                 </li>
@@ -115,7 +115,7 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown nav-user">
-                            <a class="nav-link nav-user-img"  id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="assets/images/avatar-1.jpg" alt="" class="user-avatar-md rounded-circle"></a>
+                            <a class="nav-link nav-user-img"  id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="../img/img_sistema/avatar-1.jpg" alt="" class="user-avatar-md rounded-circle"></a>
                             <div class="dropdown-menu dropdown-menu-right nav-user-dropdown" aria-labelledby="navbarDropdownMenuLink2">
                                 <div class="nav-user-info">
                                     <h5 class="mb-0 text-white nav-user-name">Antonio Carlos</h5>
@@ -348,22 +348,6 @@
                                         <li class="nav-item">
                                             <a class="nav-link" >vazio 1</a>
                                         </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link"  data-toggle="collapse" aria-expanded="false" data-target="#submenu-11" aria-controls="submenu-11">vazio 2</a>
-                                            <div id="submenu-11" class="collapse submenu">
-                                                <ul class="nav flex-column">
-                                                    <li class="nav-item">
-                                                        <a class="nav-link" href="#">vazio 1</a>
-                                                    </li>
-                                                    <li class="nav-item">
-                                                        <a class="nav-link" href="#">vazio 2</a>
-                                                    </li>
-                                                </ul>
-                                            </div>
-                                        </li>
-                                        <li class="nav-item">
-                                            <a class="nav-link" href="#">vazio 3</a>
-                                        </li>
                                     </ul>
                                 </div>
                             </li>
@@ -392,7 +376,7 @@
                 <div class="row">
                     <div class="offset-xl-2 col-xl-8 offset-lg-2 col-lg-8 col-md-12 col-sm-12 col-12">
                         <div class="error-section">
-                            <img src="../assets/images/error-img.png" alt="" class="img-fluid">
+                            <img src="../img/img_sistema/error-img.png" alt="" class="img-fluid">
                             <div class="error-section-content">
                                 <h1 class="display-3">Page Not Found</h1>
                                 <p> The generated Lorem Ipsum is therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
@@ -402,36 +386,7 @@
                     </div>
                 </div>
             </div>
-            <!-- ============================================================== -->
-            <!-- footer -->
-            <!-- ============================================================== -->
-            <div class="bg-white p-3">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 text-dark text-center">
-                          
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- ============================================================== -->
-            <!-- end footer -->
-            <!-- ============================================================== -->
-            <!-- ============================================================== -->
-            <!-- end wrapper -->
-            <!-- ============================================================== -->
-            <!-- ============================================================== -->
-            <!-- end footer -->
-            <!-- ============================================================== -->
         </div>
-    
-    <!-- ============================================================== -->
-    <!-- end main wrapper -->
-    <!-- ============================================================== -->
-    <!-- ============================================================== -->
-    <!-- end main wrapper -->
-    <!-- ============================================================== -->
-    <!-- Optional JavaScript -->
       <script src="../chart_js/jquery-3.3.1.min.js"></script>
     <script src="../chart_js/bootstrap.bundle.js"></script>
     <script src="../chart_js/jquery.slimscroll.js"></script>
